      partitions we can not resize
    - active_partition/resize/do_option: tell the user if the resize
      operation is impossible
    - active_partition/resize/do_option: disable_swap before resize
      operation
    - active_partition/resize/do_option: add bad code to resize NTFS
      partitions
  * Joey Hess
    - use search-path to find ntfsresize

 -- Anton Zinoviev <zinoviev@debian.org>  Tue, 28 Sep 2004 15:34:51 +1000

partman-partitioning (28) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Croatian (hr.po) by Krunoslav Gernhard
    - Hungarian (hu.po) by VERÓK István
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Italian (it.po) by Stefano Canepa
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnasn
    - Bøkmal, Norwegian (nb.po) by Axel Bojer
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Russian L10N Team
    - Slovenian (sl.po) by Jure Čuhalev
    - Swedish (sv.po) by Per Olofsson
    - Turkish (tr.po) by Recai Oktaş
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Sep 2004 21:27:17 -0400

partman-partitioning (27) unstable; urgency=low

  * Remove seen flag munging and fix reset call ordering to better support
    preseeding.

 -- Joey Hess <joeyh@debian.org>  Wed,  1 Sep 2004 16:20:37 -0400

partman-partitioning (26) unstable; urgency=low

  * Joey Hess