@@ -11,6 +11,8 @@ partman-partitioning (29) UNRELEASED; urgency=low
       partitions
   * Joey Hess
     - use search-path to find ntfsresize
+    - make this an arch any package, and vary the dependencies to pull in
+      ntfstools-udeb on architectures that are likely to have ntfs partitions
 
  -- Anton Zinoviev <zinoviev@debian.org>  Tue, 28 Sep 2004 15:34:51 +1000
 
